--- a/src/main.scss
+++ b/src/main.scss
@@ -2,19 +2,11 @@
 $NotoSans: "Noto Sans KR", sans-serif;
 $Raleway: "Raleway", sans-serif;
 
-// Tomorrow Night Blue Color Scheme
-$Background: #002451;
-$CurrentLine: #00346E;
-$Selection: #003F8E;
-$Foreground: #FFFFFF;
-$Comment: #7285B7;
-$Red: #FF9DA4;
-$Orange: #FFC58F;
-$Yellow: #FFEEAD;
-$Green: #D1F1A9;
-$Aqua: #99FFFF;
-$Blue: #BBDAFF;
-$Purple: #EBBBFF;
+// Color
+$White: #DADADB;
+$Black: #010204;
+$Grey: #252627;
+$Red: #FD2F4A;
 
 // Smartphone
 @mixin m {
@@ -31,9 +23,9 @@ $Purple: #EBBBFF;
 }
 
 body {
-    color: $Foreground;
+    color: $White;
     font-family: $NotoSans;
-    background-color: #010204;
+    background-color: $Black;
 }
 
 main {
@@ -56,7 +48,7 @@ header {
         cursor: pointer;
         font-size: 20px;
         font-weight: 500;
-        letter-spacing: 8px;
+        letter-spacing: 6px;
         font-family: $Raleway;
         text-transform: uppercase;
     }
@@ -102,7 +94,66 @@ section {
         font-family: $Raleway;
         text-transform: uppercase;
         &:hover {
-            color: #FD2F4A;
+            color: $Red;
+        }
+    }
+}
+
+#list {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    li {
+        width: 95%;
+        height: 75px;
+        display: flex;
+        cursor: pointer;
+        position: relative;
+        align-items: center;
+        border-radius: 10px;
+        margin-bottom: 7.5px;
+        font-family: $Raleway;
+        justify-content: space-evenly;
+        background-color: $Grey;
+        h1 {
+            font-size: 20px;
+            font-weight: 500;
+        }
+        &:hover {
+            background-color: $Red;
+            h1 {
+                color: $Black;
+            }
+        }
+    }
+}
+
+#play {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    position: relative;
+    grid-template: 70% 1fr / 1fr;
+    img {
+        object-position: center center;
+        object-fit: cover;
+        cursor: pointer;
+    }
+    #ctrl {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        i {
+            font-size: 24px;
+        }
+        input {
+            width: 70%;
+            height: 7.5px;
+            margin: 0 24px;
+            cursor: pointer;
         }
     }
 }
