--- a/src/main.scss
+++ b/src/main.scss
@@ -75,6 +75,14 @@ section {
     position: relative;
 }
 
+#home {
+    height: 100%;
+    img {
+        object-position: 45% center;
+        object-fit: cover;
+    }
+}
+
 #menu {
     width: 100%;
     height: 100%;
